# Cost-Metrics

./: .dev_env.sh  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  server.py  server_models.py  worker.py
.github/workflows/: Deploy.yaml  Test.yaml  Test_and_Deploy.yaml
Tests/: env.py  migrations.sql  test_case.py  test_metrics.py  utils.py
Tests/cases/: __init__.py
Tests/cases/aggs/: emp_availability.py  emp_level.py  iteration_cost_gross.py  iterations_per_hour.py  overtime_sc_hours.py  paid_leave_hours.py  proactive_work_cost_gross.py  proactive_work_hours_incl_leaves.py  sc_proactive_work_ratio.py  sc_work_cost_gross.py  sc_work_hours_incl_overtime.py  support_service_cost_gross.py  ticket_cost_gross.py  tickets_per_hour.py  total_work_hours_incl_overtime.py  unpaid_leave_hours.py  work_hour_cost_gross.py
Tests/cases/raw/: employees.py  (+4 more)
config/: __init__.py  config.py  environ.py  roles.py  tasks.py
config/Tests/: test_config.py
configs/: config.py
configs/Tests/: test_config.py
repository/: __init__.py
repository/metrics/: cost_metrics.py
repository/wf/: work_hours.py  work_on_holidays.py
sql_queries/: index.py  meta.py  remote_index.py  transform_load_index.py
sql_queries/Tests/: test_query_params.py
sql_queries/index/: __init__.py
sql_queries/meta/: __init__.py  cost_metrics.py  employees.py
sql_queries/transform_load/: index_defs.py  table_defs.py
tasks/: cost_metrics_tasks.py  employees.py  wf_tasks.py
utils/: __init__.py  state_access_authorizer.py
(+151 files in other folders)
