[tool.poetry]
authors = ["Stanislav Shchelokovskiy <stanislav.shchelokovskiy@gmail.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.87.0"
flower = "^1.2.0"
pydantic = "^1.9.1"
pyodbc = "^4.0.35"
python = "^3.11"
requests = "^2.28.1"
uvicorn = "^0.19.0"
sqlalchemy = "^2.0.4"
wrapt = "^1.15.0"
asyncio = "^3.4.3"
aiofiles = "^23.1.0"
pandas = "^2.0.1"
celery = { extras = ["redis"], version = "^5.2.7" }
aiosqlite = "^0.19.0"
aiohttp = "^3.9.3"
cachetools = "^5.3.3"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
jsonschema = "^4.17.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = { extras = ["psutil"], version = "^2.5.0" }
ruff = "^0.1.7"
toml = "^0.10.2"
yapf = "^0.32.0"
mypy = "^1.1.1"
httpx = "^0.27.0"
anyio = ">3.7,<4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as e2e (deselect with '-m \"not e2e\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.ruff.format]
quote-style = "single"
exclude = ["*.pyi"]
